Support cartesian products of environments in MultiEnvTestEngine